Fix z-index on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -316,11 +316,11 @@ main {
                             min-height: fit-content;
                             max-height: 0;
                             display: flex;
-                            overflow-y: auto;
-                            transition: all 0.3s;
 
                             &.expand {
                                 max-height: 400px;
+                                overflow-y: auto;
+                                animation: .3s delay-overflow;
                             }
 
                             &::-webkit-scrollbar {
@@ -1042,14 +1042,42 @@ main {
                 .drop-down-container {
 
                     &.city {
-                        width: 100%
+                        width: 100%;
+                        z-index: 10;
                     }
 
                     &.distance {
-                        width: 100%
+                        width: 100%;
+                        z-index: 9;
+                    }
+
+                    &.sector {
+                        z-index: 8;
+                    }
+
+                    &.employment-form {
+                        z-index: 6;
+                    }
+
+                    &.working-hours {
+                        z-index: 7;
+                    }
+
+                    &.language {
+                        z-index: 5;
                     }
                 }
             }
         }
+    }
+}
+
+@keyframes delay-overflow {
+    from {
+        overflow-y: hidden;
+    }
+
+    to {
+        overflow-y: auto;
     }
 }
